--- a/static/scss/components/_wrapper.scss
+++ b/static/scss/components/_wrapper.scss
@@ -260,6 +260,7 @@
         box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.6);
         margin: 70px;
         margin-bottom: 0;
+        transition: all 0.5s ease-in-out;
         &:hover {
           background-color: #4f4f4f;
           color: #e8e8e8;
